appId: com.edweiss
---
- launchApp:
    clearState: true

- assertVisible: "Login"
- assertVisible: "Continue with Google"
- tapOn: "Continue with Google"
